# homework5

./: .env_example  README.md  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
materials/: models.py  seriallizers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0002_alter_lesson_link_to_the_video.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_course.py  0003_subscription.py  0004_alter_lesson_course.py  0004_course_subscribers_course_updated_at_and_more.py
users/: admin.py  filters.py  models.py  permissions.py  seriallizers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: courses.json  lesson.json  payments.json  users.json
users/management/commands/: csu.py  populate_payments.py
users/migrations/: 0001_initial.py  0002_payment_link_payment_session_id_alter_payment_amount.py
